--- a/2021.html
+++ b/2021.html
@@ -132,7 +132,7 @@ Kunst: Gabriele Wendland, Sigrid Gruber</p>
           </div>
         </div>
         <div class="col-md-4">
-         <img style="width:600px ; height: 800px" src="img/1.png">
+         <img style="width:600px ; height: 800px" src="img/1.jpg">
         </div>
       </div>
     </div>
