--- a/index.html
+++ b/index.html
@@ -293,12 +293,12 @@
         </div>
         <div class="owl-carousel owl-theme">
           <div class="item">
-            <img src="img/1.png" alt="Course #1">
+            <img src="img/1.jpg" alt="Course #1">
             <div class="down-content">
               <h4>Entpuppen - 2021</h4>
               <p>Bastel Deinen eigenen Avatar und lass ihn lebendig werden!!.<br><br></p>
               <div class="author-image">
-                <img src="img/capture2.png" alt="Author 1">
+                <img src="img/capture2.jpg" alt="Author 1">
               </div>
               <div class="text-button-pay">
                 <a href="2021.html">nächster<i class="fa fa-angle-double-right"></i></a>
@@ -311,7 +311,7 @@
               <h4>Komma klar - 2020 </h4>
               <p>Komma klar- Tanz- und Filmprojekt<br>ab 21. August 2020 bis zum 14. März 2021</p>
               <div class="author-image">
-                <img src="img/capture2.png" alt="Author 2">
+                <img src="img/capture2.jpg" alt="Author 2">
               </div>
               <div class="text-button-free">
                 <a href="2020.html">nächster<i class="fa fa-angle-double-right"></i></a>
@@ -324,7 +324,7 @@
               <h4>Tanztheater Dio Mio 2016</h4>
               <p>Die sich neuformende Tanzcompagnie Süderelbe führte ihr neues Theaterstück</p>
               <div class="author-image">
-                <img src="img/capture2.png" alt="Author 3">
+                <img src="img/capture2.jpg" alt="Author 3">
               </div>
               <div class="text-button-pay">
                 <a href="2016.html">nächster<i class="fa fa-angle-double-right"></i></a>
@@ -337,7 +337,7 @@
               <h4>Hip Hop - 2013</h4>
               <p>Kindertheater – Princess P. <br>frei nach der Sage der Persephone</p>
               <div class="author-image">
-                <img src="img/capture2.png" alt="Author 2">
+                <img src="img/capture2.jpg" alt="Author 2">
               </div>
               <div class="text-button-free">
                 <a href="2013.html">nächster<i class="fa fa-angle-double-right"></i></a>
@@ -372,7 +372,7 @@ und kreativ zu werden.</p>
           </div>
         </div>
         <div class="col-md-6">
-             <img src="img/capture3.jpg">
+             <img src="img/capture2.jpg">
                 </div>
     </div>
   </section>
