--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
                 <img src="img/capture2.jpg" alt="Author 1">
               </div>
               <div class="text-button-pay">
-                <a href="2021.html">nächster<i class="fa fa-angle-double-right"></i></a>
+                <a href="2021.html " target="_blank">nächster<i class="fa fa-angle-double-right"></i></a>
               </div>
             </div>
           </div>
@@ -314,7 +314,7 @@
                 <img src="img/capture2.jpg" alt="Author 2">
               </div>
               <div class="text-button-free">
-                <a href="2020.html">nächster<i class="fa fa-angle-double-right"></i></a>
+                <a href="2020.html" target="_blank">nächster<i class="fa fa-angle-double-right"></i></a>
               </div>
             </div>
           </div>
@@ -327,7 +327,7 @@
                 <img src="img/capture2.jpg" alt="Author 3">
               </div>
               <div class="text-button-pay">
-                <a href="2016.html">nächster<i class="fa fa-angle-double-right"></i></a>
+                <a href="2016.html" target="_blank">nächster<i class="fa fa-angle-double-right"></i></a>
               </div>
             </div>
           </div>
@@ -340,7 +340,7 @@
                 <img src="img/capture2.jpg" alt="Author 2">
               </div>
               <div class="text-button-free">
-                <a href="2013.html">nächster<i class="fa fa-angle-double-right"></i></a>
+                <a href="2013.html " target="_blank">nächster<i class="fa fa-angle-double-right"></i></a>
               </div>
             </div>
           </div>
