--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@ und kreativ zu werden.</p>
           </div>
         </div>
         <div class="col-md-6">
-             <img src="p/53.jpg">
+             <img src="img/1.jpg">
                 </div>
     </div>
   </section>
