--- a/index.html
+++ b/index.html
@@ -297,6 +297,9 @@
             <div class="down-content">
               <h4>Entpuppen - 2021</h4>
               <p>Bastel Deinen eigenen Avatar und lass ihn lebendig werden!!.<br><br></p>
+              <div class="author-image">
+                <img src="img/ok.jpg" alt="Author 2">
+              </div>
               <div class="text-button-pay">
                 <a href="2021.html " >nächster<i class="fa fa-angle-double-right"></i></a>
               </div>
@@ -307,6 +310,9 @@
             <div class="down-content">
               <h4>Komma klar - 2020 </h4>
               <p>Komma klar- Tanz- und Filmprojekt<br>ab 21. August 2020 bis zum 14. März 2021</p>
+              <div class="author-image">
+                <img src="img/ok.jpg" alt="Author 2">
+              </div>
               <div class="text-button-free">
                 <a href="2020.html" >nächster<i class="fa fa-angle-double-right"></i></a>
               </div>
@@ -317,6 +323,9 @@
             <div class="down-content">
               <h4>Tanztheater Dio Mio 2016</h4>
               <p>Die sich neuformende Tanzcompagnie Süderelbe führte ihr neues Theaterstück</p>
+              <div class="author-image">
+                <img src="img/ok.jpg" alt="Author 2">
+              </div>
               <div class="text-button-pay">
                 <a href="2016.html" >nächster<i class="fa fa-angle-double-right"></i></a>
               </div>
@@ -327,6 +336,9 @@
             <div class="down-content">
               <h4>Hip Hop - 2013</h4>
               <p>Kindertheater – Princess P. <br>frei nach der Sage der Persephone</p>
+               <div class="author-image">
+                <img src="img/ok.jpg" alt="Author 2">
+              </div>
               <div class="text-button-free">
                 <a href="2013.html " >nächster<i class="fa fa-angle-double-right"></i></a>
               </div>
