--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
               <article id='tabs-3'>
                 <div class="row">
                   <div class="col-md-6">
-                    <img src="p/1002.jpg" alt="">
+                    <img src="img/7.jpg" alt="">
                     <br>
                     <br>
                     <br>
@@ -372,7 +372,7 @@ und kreativ zu werden.</p>
           </div>
         </div>
         <div class="col-md-6">
-             <img src="img/ok.jpg">
+             <img src="img/oke.jpg">
                 </div>
     </div>
   </section>
