--- a/index-color.html
+++ b/index-color.html
@@ -57,7 +57,7 @@ http://www.templatemo.com/tm-500-fluid-gallery
             <div class="cd-slider-nav">
                 <nav class="navbar">
                     <div class="tm-navbar-bg">
-
+                     <a class="navbar-brand text-uppercase" href="index.html"><i class="fa fa-picture-o tm-brand-icon"></i>Zurück zur Startseite</a>
                         <button class="navbar-toggler hidden-lg-up" type="button" data-toggle="collapse" data-target="#tmNavbar">
                             &#9776;
                         </button>
