--- a/2016.html
+++ b/2016.html
@@ -85,7 +85,7 @@
   <!--header-->
   <header class="main-header clearfix" role="header">
     <div class="logo">
-      <a href="#"><em>Tanzcompagnie</em> Süderelbe</a>
+      <a href="index.html"><em>Zurück zur </em> Startseite</a>
     </div>
   </header>
 
