--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <nav id="menu" class="main-nav" role="navigation">
       <ul class="main-menu">
         <li><a href="#section1">Heim</a></li>
-        <li><a href="#section1">Bio</a></li>
+        <li><a href="#section5">Bio</a></li>
         <li class="has-submenu"><a href="#section5">über uns</a>
           <ul class="sub-menu">
             <li><a href="#section5">Wer sind wir?</a></li>
@@ -182,7 +182,7 @@
         <div class="col-md-4">
           <article class="video-item">
             <figure>
-            <<video controls width="600", height="520">
+            <video controls max-width="600", max-height="520">
 
             <source src="assets/images/pres.mp4" type="video/mp4">
 </video>
@@ -372,7 +372,7 @@ und kreativ zu werden.</p>
           </div>
         </div>
         <div class="col-md-6">
-             <img src="img/oke.jpg">
+             <img class=img-responsive src="img/oke.jpg">
                 </div>
     </div>
   </section>
@@ -395,7 +395,7 @@ und kreativ zu werden.</p>
             <li><a href="https://www.youtube.com/channel/UCNyBJF5G1WglZISPCeOLQwA" target="_blank"><i class="fab fa-youtube"></i></a></li>
             <li><a href="https://www.tiktok.com/@tanzcompagniesuederelbe?_d=da35a76f5dhg5m&language=de&sec_uid=MS4wLjABAAAAC-VtnzjNeVq_RUOkfmYF-rOYAWZtW9tbXKhJkOjUzUCjwma3JajChtsWtKrGsJlH&share_author_id=6848266880617432069&u_code=ddba4laehmj5hj&utm_campaign=client_share&utm_medium=ios&user_id=6848266880617432069&tt_from=copy&utm_source=copy&source=h5_m&_r=1" target="_blank"><i class="fab fa-tiktok"></i></a></li>
         </ul><br><br>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2374.6260766332603!2d9.852166815735291!3d53.475142480006156!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47b19b1e55555555%3A0xf2a3427aec5c16f1!2sKulturhaus%20S%C3%BCderelbe%20e.V.!5e0!3m2!1sfr!2stn!4v1631493339463!5m2!1sfr!2stn" width="700" height="422" style="border:0; text-align: center; " allowfullscreen="" loading="lazy"></iframe>
+        <iframe class=img-responsive src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2374.6260766332603!2d9.852166815735291!3d53.475142480006156!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47b19b1e55555555%3A0xf2a3427aec5c16f1!2sKulturhaus%20S%C3%BCderelbe%20e.V.!5e0!3m2!1sfr!2stn!4v1631493339463!5m2!1sfr!2stn" width="700" height="422" style="border:0; text-align: center; " allowfullscreen="" loading="lazy"></iframe>
     </div>
           </div>
 
@@ -411,7 +411,7 @@ und kreativ zu werden.</p>
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <p><i class="fa fa-copyright"></i> Copyright 2021 by Tanzcompagnie Süderelbe || DESGIN Mokhtar  
+          <p><i class="fa fa-copyright"></i> Copyright 2021 by Tanzcompagnie Süderelbe   
           
                 </p>
             
