--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         <div class="col-md-4">
           <article class="video-item">
             <figure>
-            <video controls max-width="600", max-height="520">
+            <video controls width="550",height="520">
 
             <source src="assets/images/pres.mp4" type="video/mp4">
 </video>
